Deprecated methods and cleanup
Eclipse has been warning me about deprecated methods and code/style cleanup, so throwing a few of these together:

Client - Switch from deprecated 'new Long()' to 'Long.valueOf()'.
GoogleMapsGeocoder - Remove unused import.
TeamIntroPresentation - Don't reassign parameter.
WorldPresentation - Make method static and remove unused vars.
TeamTileHelper - Make 2 methods static.

Apologies for auto formatting changes, but at least it makes these consistent with other classes.